tests/valid/test_record_04.wyal
type OpenPoint is ({int x,int y, ...} p)

assert:
    forall(OpenPoint p):
        if:
            p.x > 0
        then:
            p.x >= 0
